[tool.poetry]
name = "utility_tools"
version = "0.0.2"
description = "a small python package containing tools for accessing/working with its_live data with xarray"
authors =  ['Emma Marshall <ekm328@gmail.com>']
license = "MIT"
readme = "README.md"
homepage = "https://github.com/e-marshall/utility_tools"
repository = "https://github.com/e-marshall/utility_tools"
keywords = ["Python"]

[tool.poetry.dependencies]
python = "^3.10"
xarray = ">-2022.03.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
